--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Explorable Explanations by ideonexus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
     <section class="page-header">
         <h1>Explorable Explanations</h1>
-        <a href="https://github.com/ideonexus/Code-in-the-Classroom" class="btn">View on GitHub</a>
-        <a href="https://github.com/ideonexus/Code-in-the-Classroom/zipball/master" class="btn">Download .zip</a>
-        <a href="https://github.com/ideonexus/Code-in-the-Classroom/tarball/master" class="btn">Download .tar.gz</a>
+        <a href="https://github.com/ideonexus/Explorable-Explanations" class="btn">View on GitHub</a>
+        <a href="https://github.com/ideonexus/Explorable-Explanations/zipball/master" class="btn">Download .zip</a>
+        <a href="https://github.com/ideonexus/Explorable-Explanations/tarball/master" class="btn">Download .tar.gz</a>
 
         <p>Here is an evolving list of one-shot standalone educational toys.</p>
     </section>
