Responsive design for book reader, added "We Are Animals" book.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 
         <p>The following are works in progress/things to build:</p>
 
+        <h3>Working Memory Games</h3>
+
         <h3>Boolean Logic Maze</h3>
 
         <h3>Alphabet Game</h3>
