--- a/index.html
+++ b/index.html
@@ -73,12 +73,6 @@
 
         <p><a href="reading/alphabeticalordersort/"><img src="images/alphabeticalordersort.png" alt="Image of Alphabetical Order Sort" title="" /></a></p>
 
-        <h2><a href="science/earth/daysoftheweek/">Days of the Week Carousel</a></h2>
-
-        <p>Carousel of the days of the week with the planets for which they are named.</p>
-
-        <p><a href="science/earth/daysoftheweek/"><img src="images/daysoftheweek.png" alt="Image of Days of the Week Carousel" title="" /></a></p>
-
         <h2><a href="reading/wordsearch/">Word Search</a></h2>
 
         <p>The Dolche Words as a wordsearch game. Goes from Pre-K to Third Grade.</p>
@@ -115,6 +109,14 @@
 
         <p><a href="reading/creativecommonsbookreader/"><img src="images/creativecommonsbookreader.png" alt="Image of Creative Commons Book Reader" title="" /></a></p>        
 
+        <h2><a href="reading/speechboard/">Speechboard</a></h2>
+
+        <p>Simulates the speechboard used by Stephen Hawking.</p>
+
+        <p>Credit to <a href="http://www.cranklin.com/alphabetboard/">Cranky's Alphabet Board</a>.</p>
+
+        <p><a href="reading/speechboard/"><img src="images/speechboard.png" alt="Image of Speechboard" title="" /></a></p>
+
         <h2><a href="math/numbermandala/">Number Mandela</a></h2>
 
         <p>Generates a number mandela for exploring primes and factors.</p>
@@ -123,15 +125,23 @@
 
         <p><a href="math/numbermandala/"><img src="images/numbermandela.png" alt="Image of Number Mandela" title="" /></a></p>
 
+        <h2><a href="math/bayestheorem/">Bayes Theorem Calculator</a></h2>
+
+        <p>Credit <a href="https://ludios.org/bayes/">ludios.org</a>.</p>
+
+        <p><a href="math/bayestheorem/"><img src="images/bayestheorem.png" alt="Image of Bayes Theorem Calculator" title="" /></a></p>
+
+        <h2><a href="science/earth/daysoftheweek/">Days of the Week Carousel</a></h2>
+
+        <p>Carousel of the days of the week with the planets for which they are named.</p>
+
+        <p><a href="science/earth/daysoftheweek/"><img src="images/daysoftheweek.png" alt="Image of Days of the Week Carousel" title="" /></a></p>
+
         <h2><a href="math/binarycountingmachine/">Binary Counting Machine</a></h2>
 
         <p>A set of processes that step through counting in binary.</p>
 
         <p><a href="math/binarycountingmachine/"><img src="images/binarycountingmachine.png" alt="Image of Binary Counting Machine" title="" /></a></p>
-
-        <h2><a href="reading/simplifyspelling/">Simplify Spelling</a></h2>
-
-        <p>This is a bookmarklet that will simplify the spelling of web pages when clicked.</p>
 
         <h2><a href="math/booleaniching/">The Boolean iChing</a></h2>
 
@@ -139,11 +149,9 @@
 
         <p><a href="math/booleaniching/"><img src="images/booleaniching.png" alt="Image of Boolean iChing" title="" /></a></p>
 
-        <h2><a href="math/bayestheorem/">Bayes Theorem Calculator</a></h2>
+        <h2><a href="reading/simplifyspelling/">Simplify Spelling</a></h2>
 
-        <p>Credit <a href="https://ludios.org/bayes/">ludios.org</a>.</p>
-
-        <p><a href="math/bayestheorem/"><img src="images/bayestheorem.png" alt="Image of Bayes Theorem Calculator" title="" /></a></p>
+        <p>This is a bookmarklet that will simplify the spelling of web pages when clicked.</p>
 
         <h2>WishList</h2>
 
