--- a/reading/creativecommonsbookreader/index.html
+++ b/reading/creativecommonsbookreader/index.html
@@ -49,7 +49,7 @@
      }
 
     #footer {
-        width: 90%;
+        width: 100%;
         text-align: center;
         position: absolute;
         bottom: 0;
@@ -195,10 +195,12 @@
 
 .wordnav.left {
     float: left;
+    margin-left: 10px;
 }
 
 .wordnav.right {
     float: right;
+    margin-right: 10px;
 }
 
 #optionscontainer {
@@ -217,6 +219,9 @@
 }
 
 @media only screen and (max-width: 800px) {
+    .bookpage {
+        width: 100%;
+    }
     #currentsentence {
         font-size: 1.5em;
         height: 75px;
