Added one-letter word-changer.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
 
         <p><a href="reading/wordsearch/"><img src="images/wordsearch.png" alt="Word Search" title="" /></a></p>
 
+        <h2><a href="reading/oneletterwordchanger/">One-Letter Word-Changer</a></h2>
+
+        <p>Change one word to create new words. For teaching phonetics.</p>
+
+        <p>Word Groups from <a href="http://www.montessorimom.com/phonetic-word-list/">Montessori Mom Phonentic Word List</a></p>
+
+        <p><a href="reading/oneletterwordchanger/"><img src="images/oneletterwordchanger.png" alt="Image of Alphabet Flash Cards" title="" /></a></p>
+
         <h2><a href="reading/alphabetflashcards/">Alphabet Flashcards</a></h2>
 
         <p>JavaScript alphabet flashcard page for teaching my kids.</p>
