Added 1WSC to index.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,19 @@
 
         <h2><a href="reading/oneletterwordchanger/">One-Letter Word-Changer</a></h2>
 
-        <p>Change one word to create new words. For teaching phonetics.</p>
+        <p>Change one letter to create new words. For teaching phonetics.</p>
 
         <p>Word Groups from <a href="http://www.montessorimom.com/phonetic-word-list/">Montessori Mom Phonentic Word List</a></p>
 
-        <p><a href="reading/oneletterwordchanger/"><img src="images/oneletterwordchanger.png" alt="Image of Alphabet Flash Cards" title="" /></a></p>
+        <p><a href="reading/oneletterwordchanger/"><img src="images/oneletterwordchanger.png" alt="Image of One-Letter Word-Changer" title="" /></a></p>
+
+        <h2><a href="reading/onewordsentencechanger/">One-Word Sentence-Changer</a></h2>
+
+        <p>Change one word to create a new sentence. Student gets confidence in reading the same words and learns new words with pictures to help.</p>
+
+        <p>BY-NC-SA Creative Commons pictures by <a href="http://www.senteacher.org/worksheet/118/PictureLottoBingoCreator.html">SEN Teacher</a>.</p>
+
+        <p><a href="reading/onewordsentencechanger/"><img src="images/onewordsentencechanger.png" alt="Image of One-Word Sentence-Changer" title="" /></a></p>
 
         <h2><a href="reading/alphabetflashcards/">Alphabet Flashcards</a></h2>
 
